--- a/src/app/pages/portal.component.html
+++ b/src/app/pages/portal.component.html
@@ -1,12 +1,17 @@
 <div class="d-flex flex-column ">
+    <!-- 
     <div>
         <app-navbar></app-navbar>
     </div>
+ -->
+
     <div>
         <div class="d-flex flex-row">
-            <div class="side-bar">
-                <app-sidebar> </app-sidebar>
-            </div>
+            <app-sidebar> </app-sidebar>
+
+            <!-- <div>
+                <app-navbar></app-navbar>
+            </div> -->
 
             <div class="flex-fill">
                 <router-outlet>
