--- a/src/app/shared/sidebar/module/module.component.scss
+++ b/src/app/shared/sidebar/module/module.component.scss
@@ -1,31 +1,47 @@
 $expandSpeed: 0.2s;
 $modulesSpeed: 0.2s;
-.module-container {
-    margin-bottom: 2px;
-    box-sizing: content-box;
-    cursor: pointer;
-    * {
-        user-select: none;
-    }
-    .activeModule {
-        color: #1e61a3;
-    }
+// .module-container {
+//     cursor: pointer;
+//     * {
+//         user-select: none;
+//     }
+//     .activeModule {
+//         color: #1e61a3;
+//     }
+// }
+p {
+    margin: 0;
 }
 
 .module {
-    display: flex;
-    margin-bottom: 10px;
     transition: 0.1s all ease-in;
+    display: flex;
+    direction: column;
+    align-items: center;
+    margin: 10px 0 5px 7px;
+    height: 46px;
+    width: auto;
+    font-size: 14px;
+    font-weight: 600;
+    color: white;
+    &:hover {
+        background-color: rgba(250, 250, 250, 0.2);
+        border-radius: 3px;
+    }
+    * {
+        user-select: none;
+    }
     .module-icon {
-        margin-right: 10%;
+        color: white;
+        margin: 0 20px 0 15px;
     }
     .module-name {
-        margin-top: 1px;
+        margin-top: 2.5px;
     }
     .module-expand {
-        margin-top: 1px;
         transform: rotate(180deg);
         margin-left: auto;
+        margin-right: 10px;
         -ms-transform: rotate(180deg);
         -moz-transform: rotate(180deg);
         -webkit-transform: rotate(180deg);
@@ -35,8 +51,8 @@ $modulesSpeed: 0.2s;
         cursor: pointer;
     }
     .module-close {
-        margin-top: 1px;
         margin-left: auto;
+        margin-right: 10px;
         -moz-transition: all $expandSpeed linear;
         -webkit-transition: all $expandSpeed linear;
         transition: all $expandSpeed linear;
@@ -44,12 +60,24 @@ $modulesSpeed: 0.2s;
     }
 }
 
+.activeModule {
+    background-color: white;
+    border-radius: 3px;
+    opacity: 1;
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(60 72 88 / 40%);
+    color: #3c4858;
+    .module-icon {
+        color: #3c4858;
+    }
+    &:hover {
+        background-color: rgba(250, 250, 250, 1.0);
+    }
+}
+
 .subModulesOff {
-    margin-left: 30%;
     max-height: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     overflow: hidden;
     -webkit-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     -moz-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
@@ -57,8 +85,9 @@ $modulesSpeed: 0.2s;
     -o-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     transition: max-height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     .sub-module {
-        width: fit-content;
-        margin: 0px 0px 5px 0px;
+        font-size: 13px;
+        padding-left: 66px;
+        margin: 0;
         &:hover {
             color: #1e61a3;
         }
@@ -66,11 +95,9 @@ $modulesSpeed: 0.2s;
 }
 
 .subModulesOn {
-    margin-left: 30%;
-    max-height: 150px;
+    max-height: 220px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     overflow: hidden;
     -webkit-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     -moz-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
@@ -78,10 +105,9 @@ $modulesSpeed: 0.2s;
     -o-transition: height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     transition: max-height $modulesSpeed $modulesSpeed, opacity 600ms 0ms;
     .sub-module {
-        width: fit-content;
-        margin: 0px 0px 5px 0px;
-        &:hover {
-            color: #1e61a3;
-        }
+        font-size: 13px;
+        padding-left: 66px;
+        border-radius: 3px;
+        margin: 0;
     }
 }
