--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,22 +1,92 @@
-$redQuickgas: #e0040b;
-.main-container {
-    position: fixed;
-    width: 200px;
-    padding: 15px;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+.sidebar {
+    background-color: #e53935;
+    box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    min-height: calc(100vh - 60px);
-    .profile-picture {
-        padding-top: 20px;
-        height: 100px;
-        border-bottom: 1px solid grey;
-        margin-bottom: 15px;
-        img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 5px;
+    height: 100%;
+    max-height: 100%;
+    position: fixed;
+    width: 260px;
+    z-index: 1;
+    .sidebar-background {
+        z-index: 1;
+        background-image: url('../../../assets/sidebar-1.jpg');
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        display: block;
+        top: 0;
+        left: 0;
+        background-size: cover;
+        background-position: 50%;
+        &::after {
+            position: absolute;
+            z-index: 3;
+            width: 100%;
+            height: 100%;
+            content: "";
+            display: block;
+            background: #fff;
+            opacity: .93;
+            background: #f44336;
+            opacity: .8;
         }
     }
-    .modules-container {
-        box-sizing: border-box;
+    .module-container {
+        display: flex;
+        direction: row;
+        border-bottom: 1px solid hsla(0, 0%, 100%, .5);
+        width: 90%;
+        padding: 7px 0 7px 10px;
+    }
+    .sidebar-content {
+        z-index: 2;
+    }
+    .logo {
+        width: 35px;
+    }
+    .module-text {
+        font-family: 'Roboto', sans-serif;
+        color: white;
+    }
+    .logo-text {
+        font-weight: 700;
+        font-size: 19px;
+        margin-left: 1rem;
+        margin-top: 7px;
+    }
+    .avatar-container {
+        height: 75px;
+        align-items: center;
+        .avatar-text {
+            font-weight: 600;
+            font-size: 15px;
+            margin-left: 1rem;
+            margin-top: 5px;
+        }
+        .avatar {
+            /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
+            background-image: url('../../../assets/user.png');
+            /* make a square container */
+            width: 36px;
+            height: 36px;
+            /* fill the container, preserving aspect ratio, and cropping to fit */
+            background-size: cover;
+            /* center the image vertically and horizontally */
+            background-position: top center;
+            /* round the edges to a circle with border radius 1/2 container size */
+            border-radius: 50%;
+        }
+    }
+    .modules {
+        z-index: 2;
+        width: 235px;
     }
 }
+
+// .sidebar {
+// .modules-container {
+//     z-index: 4;
+//     box-sizing: border-box;
+// }
+// }
